--- a/src/relatorio/medico.jrxml
+++ b/src/relatorio/medico.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.2.final using JasperReports Library version 6.2.2  -->
-<!-- 2019-10-22T01:52:55 -->
+<!-- 2019-10-23T22:47:43 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="convenio" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="790fbb8d-402c-47ed-86c8-b5fcb0080ffd">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="clinica"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -33,6 +33,10 @@
 					</textElement>
 					<text><![CDATA[Médico]]></text>
 				</staticText>
+				<image>
+					<reportElement x="380" y="16" width="205" height="50" uuid="386de3f8-ad9b-4095-818d-c85a1dbc068d"/>
+					<imageExpression><![CDATA["C:/Users/Humberto/Documents/workspace-spring-clinica/clinica/WebContent/resources/paradise-layout/images/loginHealthStat.png"]]></imageExpression>
+				</image>
 			</frame>
 		</band>
 	</title>
