--- a/src/relatorio/agendamento.jrxml
+++ b/src/relatorio/agendamento.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.2.final using JasperReports Library version 6.2.2  -->
-<!-- 2019-10-23T22:47:44 -->
+<!-- 2019-10-23T22:36:36 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="convenio" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="790fbb8d-402c-47ed-86c8-b5fcb0080ffd">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="clinica"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -39,9 +39,10 @@ FROM public.convenio]]>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="nomeMaterial" class="java.lang.String"/>
-	<field name="fornecedor.nomeFornecedor" class="java.lang.String"/>
-	<field name="valor" class="java.lang.String"/>
+	<field name="paciente.pessoa.pessoaNome" class="java.lang.String"/>
+	<field name="medico.pessoa.pessoaNome" class="java.lang.String"/>
+	<field name="dataFim" class="java.util.Date"/>
+	<field name="dataInicio" class="java.util.Date"/>
 	<group name="Group1"/>
 	<group name="Group2"/>
 	<group name="Group3"/>
@@ -58,10 +59,10 @@ FROM public.convenio]]>
 					<textElement>
 						<font size="34" isBold="true"/>
 					</textElement>
-					<text><![CDATA[Material]]></text>
+					<text><![CDATA[Agendamento]]></text>
 				</staticText>
 				<image>
-					<reportElement x="370" y="16" width="200" height="50" uuid="fa171652-917d-4a67-907e-88be78c6a3e9"/>
+					<reportElement x="370" y="21" width="219" height="50" uuid="b25346be-3092-4736-82a7-3705c95ed310"/>
 					<imageExpression><![CDATA["C:/Users/Humberto/Documents/workspace-spring-clinica/clinica/WebContent/resources/paradise-layout/images/loginHealthStat.png"]]></imageExpression>
 				</image>
 			</frame>
@@ -80,20 +81,20 @@ FROM public.convenio]]>
 				</graphicElement>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="0" width="220" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b8d7b735-434b-4916-87df-92eeb02efbdc"/>
+				<reportElement x="0" y="0" width="190" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b8d7b735-434b-4916-87df-92eeb02efbdc"/>
 				<box padding="5">
 					<topPen lineWidth="0.1" lineColor="#000000"/>
 					<leftPen lineWidth="0.1" lineColor="#000000"/>
 					<bottomPen lineWidth="0.1" lineColor="#000000"/>
 					<rightPen lineWidth="0.1" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Material]]></text>
+				<text><![CDATA[Paciente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="220" y="0" width="190" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="0ded978b-2339-4b13-8983-3b10a615c6e7"/>
+				<reportElement x="190" y="0" width="195" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="0ded978b-2339-4b13-8983-3b10a615c6e7"/>
 				<box padding="5">
 					<topPen lineWidth="0.1" lineColor="#000000"/>
 					<leftPen lineWidth="0.1" lineColor="#000000"/>
@@ -103,10 +104,10 @@ FROM public.convenio]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Fornecedor]]></text>
+				<text><![CDATA[Médico]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="410" y="0" width="145" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b686d3de-dad5-422b-81ea-8d3d6eec429e"/>
+				<reportElement x="465" y="0" width="90" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b686d3de-dad5-422b-81ea-8d3d6eec429e"/>
 				<box padding="5">
 					<topPen lineWidth="0.1" lineColor="#000000"/>
 					<leftPen lineWidth="0.1" lineColor="#000000"/>
@@ -116,12 +117,25 @@ FROM public.convenio]]>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Valor]]></text>
+				<text><![CDATA[Fim]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="385" y="0" width="80" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="0dfa30d9-71af-42cc-af66-dc5a0663d549"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Inicio]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="41">
+		<band height="42">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<rectangle>
 				<reportElement x="0" y="0" width="555" height="41" backcolor="#2E6E9E" uuid="ad28c444-1dd1-4feb-9f71-14b8cca869e8"/>
@@ -130,29 +144,57 @@ FROM public.convenio]]>
 				</graphicElement>
 			</rectangle>
 			<textField>
-				<reportElement x="0" y="0" width="220" height="40" forecolor="#FFFFFF" uuid="03b8a64b-c4f7-4c2e-82c4-3847eeb4683b"/>
-				<box padding="5"/>
+				<reportElement x="0" y="0" width="190" height="41" forecolor="#FFFFFF" uuid="03b8a64b-c4f7-4c2e-82c4-3847eeb4683b"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
 					<font isBold="true"/>
 					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nomeMaterial}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{paciente.pessoa.pessoaNome}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="220" y="0" width="190" height="40" forecolor="#FFFFFF" uuid="b576b2e4-69bc-4f72-85e4-ec01627e0799"/>
-				<box padding="5"/>
+				<reportElement x="190" y="0" width="195" height="40" forecolor="#FFFFFF" uuid="b576b2e4-69bc-4f72-85e4-ec01627e0799"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fornecedor.nomeFornecedor}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{medico.pessoa.pessoaNome}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="410" y="0" width="145" height="40" forecolor="#FFFFFF" uuid="c0094054-8aec-4f62-88e5-dce6c34e526c"/>
-				<box padding="3"/>
+				<reportElement x="465" y="0" width="90" height="40" forecolor="#FFFFFF" uuid="f921a3f6-05ef-4549-a596-ead8a0088b8b"/>
+				<box padding="3">
+					<topPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" isBold="true"/>
+					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{valor}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{dataFim}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="385" y="0" width="80" height="40" forecolor="#FFFFFF" uuid="03568511-2f6c-4f25-b4b2-e44734676c04"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{dataInicio}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
