--- a/src/relatorio/convenio.jrxml
+++ b/src/relatorio/convenio.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.2.final using JasperReports Library version 6.2.2  -->
-<!-- 2019-10-22T01:31:11 -->
+<!-- 2019-10-23T23:00:06 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="convenio" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="790fbb8d-402c-47ed-86c8-b5fcb0080ffd">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="clinica"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -62,6 +62,10 @@ FROM public.convenio]]>
 					</textElement>
 					<text><![CDATA[Convênios]]></text>
 				</staticText>
+				<image>
+					<reportElement x="370" y="20" width="210" height="50" uuid="19b25d17-344a-4949-9a44-934f974f30b4"/>
+					<imageExpression><![CDATA["C:/Users/Humberto/Documents/workspace-spring-clinica/clinica/WebContent/resources/paradise-layout/images/loginHealthStat.png"]]></imageExpression>
+				</image>
 			</frame>
 		</band>
 	</title>
@@ -142,7 +146,12 @@ FROM public.convenio]]>
 			</rectangle>
 			<textField>
 				<reportElement x="0" y="0" width="100" height="41" forecolor="#FFFFFF" uuid="03b8a64b-c4f7-4c2e-82c4-3847eeb4683b"/>
-				<box padding="5"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
 					<font isBold="true"/>
 					<paragraph lineSpacing="1_1_2"/>
@@ -151,7 +160,12 @@ FROM public.convenio]]>
 			</textField>
 			<textField>
 				<reportElement x="100" y="0" width="100" height="40" forecolor="#FFFFFF" uuid="b576b2e4-69bc-4f72-85e4-ec01627e0799"/>
-				<box padding="5"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
@@ -159,7 +173,12 @@ FROM public.convenio]]>
 			</textField>
 			<textField>
 				<reportElement x="280" y="0" width="275" height="20" forecolor="#FFFFFF" uuid="f921a3f6-05ef-4549-a596-ead8a0088b8b"/>
-				<box padding="3"/>
+				<box padding="3">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
@@ -167,7 +186,12 @@ FROM public.convenio]]>
 			</textField>
 			<textField>
 				<reportElement x="280" y="20" width="275" height="20" forecolor="#FFFFFF" uuid="0cf5c052-1269-41ff-99f6-87e357f63b09"/>
-				<box padding="3"/>
+				<box padding="3">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
@@ -175,7 +199,12 @@ FROM public.convenio]]>
 			</textField>
 			<textField>
 				<reportElement x="200" y="0" width="80" height="40" forecolor="#FFFFFF" uuid="03568511-2f6c-4f25-b4b2-e44734676c04"/>
-				<box padding="5"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
