--- a/src/relatorio/estoque.jrxml
+++ b/src/relatorio/estoque.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.2.final using JasperReports Library version 6.2.2  -->
-<!-- 2019-10-23T22:47:44 -->
+<!-- 2019-10-24T01:04:57 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="convenio" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="790fbb8d-402c-47ed-86c8-b5fcb0080ffd">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="clinica"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -39,10 +39,10 @@ FROM public.convenio]]>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<field name="nomeMaterial" class="java.lang.String"/>
-	<field name="fornecedor.nomeFornecedor" class="java.lang.String"/>
-	<field name="valor" class="java.lang.String"/>
-	<group name="Group1"/>
+	<field name="material.nomeMaterial" class="java.lang.String"/>
+	<field name="numPedido" class="java.lang.Integer"/>
+	<field name="valorUnitario" class="java.lang.Double"/>
+	<field name="material.fornecedor.nomeFornecedor" class="java.lang.String"/>
 	<group name="Group2"/>
 	<group name="Group3"/>
 	<group name="Group4"/>
@@ -58,10 +58,10 @@ FROM public.convenio]]>
 					<textElement>
 						<font size="34" isBold="true"/>
 					</textElement>
-					<text><![CDATA[Material]]></text>
+					<text><![CDATA[Estoque]]></text>
 				</staticText>
 				<image>
-					<reportElement x="370" y="16" width="200" height="50" uuid="fa171652-917d-4a67-907e-88be78c6a3e9"/>
+					<reportElement x="370" y="16" width="210" height="50" uuid="19b25d17-344a-4949-9a44-934f974f30b4"/>
 					<imageExpression><![CDATA["C:/Users/Humberto/Documents/workspace-spring-clinica/clinica/WebContent/resources/paradise-layout/images/loginHealthStat.png"]]></imageExpression>
 				</image>
 			</frame>
@@ -71,42 +71,80 @@ FROM public.convenio]]>
 		<band height="13"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="30">
+		<band height="40">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<rectangle>
-				<reportElement x="0" y="0" width="555" height="30" backcolor="#6BA6D6" uuid="6ed699ac-8f43-451a-9fa8-499c1f69f4f9"/>
+				<reportElement x="0" y="0" width="555" height="40" backcolor="#6BA6D6" uuid="6ed699ac-8f43-451a-9fa8-499c1f69f4f9">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<graphicElement>
 					<pen lineWidth="0.0"/>
 				</graphicElement>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="0" width="220" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b8d7b735-434b-4916-87df-92eeb02efbdc"/>
-				<box padding="5">
-					<topPen lineWidth="0.1" lineColor="#000000"/>
-					<leftPen lineWidth="0.1" lineColor="#000000"/>
-					<bottomPen lineWidth="0.1" lineColor="#000000"/>
-					<rightPen lineWidth="0.1" lineColor="#000000"/>
-				</box>
+				<reportElement x="470" y="0" width="85" height="40" forecolor="#FFFFFF" uuid="5b7fde7c-a2cc-490a-8fe1-d8611b7b9f44">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Material]]></text>
+				<text><![CDATA[Valor]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="220" y="0" width="190" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="0ded978b-2339-4b13-8983-3b10a615c6e7"/>
-				<box padding="5">
-					<topPen lineWidth="0.1" lineColor="#000000"/>
-					<leftPen lineWidth="0.1" lineColor="#000000"/>
-					<bottomPen lineWidth="0.1" lineColor="#000000"/>
-					<rightPen lineWidth="0.1" lineColor="#000000"/>
-				</box>
+				<reportElement x="280" y="0" width="190" height="40" forecolor="#FFFFFF" uuid="dbe59adb-ec34-4987-a2d0-b1febbb6cd98"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fornecedor]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="410" y="0" width="145" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="b686d3de-dad5-422b-81ea-8d3d6eec429e"/>
+				<reportElement x="80" y="0" width="200" height="40" forecolor="#FFFFFF" uuid="926512cf-3ff9-487b-ae10-37e1f5300575"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Material]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="0" width="80" height="40" forecolor="#FFFFFF" uuid="47ca055f-9296-418b-bb24-451b04ef3b6f">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Pedido]]></text>
+			</staticText>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="40">
+			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+			<rectangle>
+				<reportElement x="0" y="0" width="555" height="40" backcolor="#2E6E9E" uuid="ad28c444-1dd1-4feb-9f71-14b8cca869e8">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<graphicElement>
+					<pen lineWidth="0.0"/>
+				</graphicElement>
+			</rectangle>
+			<textField>
+				<reportElement x="80" y="0" width="200" height="40" forecolor="#FFFFFF" uuid="03b8a64b-c4f7-4c2e-82c4-3847eeb4683b">
+					<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
+				</reportElement>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
+					<font isBold="true"/>
+					<paragraph lineSpacing="1_1_2"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{material.nomeMaterial}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="0" width="80" height="40" forecolor="#FFFFFF" uuid="b576b2e4-69bc-4f72-85e4-ec01627e0799"/>
 				<box padding="5">
 					<topPen lineWidth="0.1" lineColor="#000000"/>
 					<leftPen lineWidth="0.1" lineColor="#000000"/>
@@ -114,45 +152,35 @@ FROM public.convenio]]>
 					<rightPen lineWidth="0.1" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Valor]]></text>
-			</staticText>
-		</band>
-	</columnHeader>
-	<detail>
-		<band height="41">
-			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-			<rectangle>
-				<reportElement x="0" y="0" width="555" height="41" backcolor="#2E6E9E" uuid="ad28c444-1dd1-4feb-9f71-14b8cca869e8"/>
-				<graphicElement>
-					<pen lineWidth="0.0"/>
-				</graphicElement>
-			</rectangle>
-			<textField>
-				<reportElement x="0" y="0" width="220" height="40" forecolor="#FFFFFF" uuid="03b8a64b-c4f7-4c2e-82c4-3847eeb4683b"/>
-				<box padding="5"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
 					<font isBold="true"/>
-					<paragraph lineSpacing="1_1_2"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{nomeMaterial}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{numPedido}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="220" y="0" width="190" height="40" forecolor="#FFFFFF" uuid="b576b2e4-69bc-4f72-85e4-ec01627e0799"/>
-				<box padding="5"/>
+				<reportElement x="470" y="0" width="85" height="40" forecolor="#FFFFFF" uuid="f921a3f6-05ef-4549-a596-ead8a0088b8b"/>
+				<box padding="3">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fornecedor.nomeFornecedor}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{valorUnitario}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="410" y="0" width="145" height="40" forecolor="#FFFFFF" uuid="c0094054-8aec-4f62-88e5-dce6c34e526c"/>
-				<box padding="3"/>
+				<reportElement x="280" y="0" width="189" height="40" forecolor="#FFFFFF" uuid="03568511-2f6c-4f25-b4b2-e44734676c04"/>
+				<box padding="5">
+					<topPen lineWidth="0.1" lineColor="#000000"/>
+					<leftPen lineWidth="0.1" lineColor="#000000"/>
+					<bottomPen lineWidth="0.1" lineColor="#000000"/>
+					<rightPen lineWidth="0.1" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" isBold="true"/>
+					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{valor}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{material.fornecedor.nomeFornecedor}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
