--- a/src/relatorio/atestado.jrxml
+++ b/src/relatorio/atestado.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.2.final using JasperReports Library version 6.2.2  -->
-<!-- 2019-10-25T01:46:00 -->
+<!-- 2019-11-14T00:51:04 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="convenio" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="790fbb8d-402c-47ed-86c8-b5fcb0080ffd">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="clinica"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -62,10 +62,6 @@ FROM public.convenio]]>
 					</textElement>
 					<text><![CDATA[Atestado]]></text>
 				</staticText>
-				<image>
-					<reportElement x="370" y="20" width="210" height="50" uuid="19b25d17-344a-4949-9a44-934f974f30b4"/>
-					<imageExpression><![CDATA["C:/Users/Humberto/Documents/workspace-spring-clinica/clinica/WebContent/resources/paradise-layout/images/loginHealthStat.png"]]></imageExpression>
-				</image>
 			</frame>
 		</band>
 	</title>
@@ -76,13 +72,13 @@ FROM public.convenio]]>
 		<band height="30">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<rectangle>
-				<reportElement x="0" y="0" width="555" height="30" backcolor="#6BA6D6" uuid="030cf853-b221-481e-8a5b-e2694f9e8396"/>
+				<reportElement x="-20" y="0" width="595" height="30" backcolor="#6BA6D6" uuid="030cf853-b221-481e-8a5b-e2694f9e8396"/>
 				<graphicElement>
 					<pen lineWidth="0.0"/>
 				</graphicElement>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="0" width="554" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="6d82ac6f-355c-4990-af94-1f33093344b4"/>
+				<reportElement x="-20" y="0" width="595" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="6d82ac6f-355c-4990-af94-1f33093344b4"/>
 				<box padding="5">
 					<topPen lineWidth="0.1" lineColor="#000000"/>
 					<leftPen lineWidth="0.1" lineColor="#000000"/>
@@ -100,7 +96,7 @@ FROM public.convenio]]>
 		<band height="350">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<rectangle>
-				<reportElement x="0" y="0" width="555" height="350" backcolor="#2E6E9E" uuid="ad28c444-1dd1-4feb-9f71-14b8cca869e8"/>
+				<reportElement x="-20" y="0" width="595" height="350" backcolor="#2E6E9E" uuid="ad28c444-1dd1-4feb-9f71-14b8cca869e8"/>
 				<graphicElement>
 					<pen lineWidth="0.0"/>
 				</graphicElement>
@@ -108,10 +104,10 @@ FROM public.convenio]]>
 			<textField>
 				<reportElement x="55" y="320" width="140" height="26" forecolor="#FFFFFF" uuid="03b8a64b-c4f7-4c2e-82c4-3847eeb4683b"/>
 				<box padding="5">
-					<topPen lineWidth="0.1" lineColor="#000000"/>
-					<leftPen lineWidth="0.1" lineColor="#000000"/>
-					<bottomPen lineWidth="0.1" lineColor="#000000"/>
-					<rightPen lineWidth="0.1" lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
 					<font isBold="true"/>
@@ -139,10 +135,10 @@ FROM public.convenio]]>
 			<textField>
 				<reportElement x="30" y="294" width="190" height="26" forecolor="#FFFFFF" uuid="a39f9083-9d29-4e45-8f42-f3500c33eae2"/>
 				<box padding="5">
-					<topPen lineWidth="0.1" lineColor="#000000"/>
-					<leftPen lineWidth="0.1" lineColor="#000000"/>
-					<bottomPen lineWidth="0.1" lineColor="#000000"/>
-					<rightPen lineWidth="0.1" lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
 					<font isBold="true"/>
@@ -152,6 +148,12 @@ FROM public.convenio]]>
 			</textField>
 			<staticText>
 				<reportElement x="320" y="300" width="190" height="20" uuid="6aea1c6e-e54c-4e5f-bee3-1a86f4c0ff68"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center"/>
 				<text><![CDATA[_________________________________]]></text>
 			</staticText>
