--- a/src/relatorio/encaminhamento.jrxml
+++ b/src/relatorio/encaminhamento.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.2.final using JasperReports Library version 6.2.2  -->
-<!-- 2019-10-25T19:51:14 -->
+<!-- 2019-11-14T00:51:07 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="convenio" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="790fbb8d-402c-47ed-86c8-b5fcb0080ffd">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="clinica"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -77,13 +77,13 @@ FROM public.convenio]]>
 		<band height="30">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<rectangle>
-				<reportElement x="0" y="0" width="555" height="30" backcolor="#6BA6D6" uuid="2060a2ff-9180-44d4-a152-13a0b815a9a3"/>
+				<reportElement x="-20" y="0" width="595" height="30" backcolor="#6BA6D6" uuid="2060a2ff-9180-44d4-a152-13a0b815a9a3"/>
 				<graphicElement>
 					<pen lineWidth="0.0"/>
 				</graphicElement>
 			</rectangle>
 			<staticText>
-				<reportElement x="0" y="0" width="554" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="299d24cb-9b85-4143-b279-38de9ac3bf1d"/>
+				<reportElement x="-20" y="0" width="595" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="299d24cb-9b85-4143-b279-38de9ac3bf1d"/>
 				<box padding="5">
 					<topPen lineWidth="0.1" lineColor="#000000"/>
 					<leftPen lineWidth="0.1" lineColor="#000000"/>
@@ -101,7 +101,7 @@ FROM public.convenio]]>
 		<band height="350">
 			<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 			<rectangle>
-				<reportElement x="0" y="0" width="555" height="350" backcolor="#2E6E9E" uuid="ad28c444-1dd1-4feb-9f71-14b8cca869e8"/>
+				<reportElement x="-20" y="0" width="595" height="350" backcolor="#2E6E9E" uuid="ad28c444-1dd1-4feb-9f71-14b8cca869e8"/>
 				<graphicElement>
 					<pen lineWidth="0.0"/>
 				</graphicElement>
@@ -109,10 +109,10 @@ FROM public.convenio]]>
 			<textField>
 				<reportElement x="62" y="306" width="140" height="26" forecolor="#FFFFFF" uuid="03b8a64b-c4f7-4c2e-82c4-3847eeb4683b"/>
 				<box padding="5">
-					<topPen lineWidth="0.1" lineColor="#000000"/>
-					<leftPen lineWidth="0.1" lineColor="#000000"/>
-					<bottomPen lineWidth="0.1" lineColor="#000000"/>
-					<rightPen lineWidth="0.1" lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
 					<font isBold="true"/>
@@ -137,17 +137,15 @@ FROM public.convenio]]>
 "Encaminho o(a) paciente "+ $F{paciente.pessoa.pessoaNome} + " que informa/apresenta os seguintes dados subjetivos e objetivos mais relevantes para justificar o encaminhamento:"
 
 
-+ $F{tipoEncaminhamento} 
- 
-]]></textFieldExpression>
++ $F{tipoEncaminhamento}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="10" y="280" width="244" height="26" forecolor="#FFFFFF" uuid="a39f9083-9d29-4e45-8f42-f3500c33eae2"/>
 				<box padding="5">
-					<topPen lineWidth="0.1" lineColor="#000000"/>
-					<leftPen lineWidth="0.1" lineColor="#000000"/>
-					<bottomPen lineWidth="0.1" lineColor="#000000"/>
-					<rightPen lineWidth="0.1" lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="html">
 					<font isBold="true"/>
@@ -162,6 +160,12 @@ FROM public.convenio]]>
 			</staticText>
 			<staticText>
 				<reportElement x="355" y="306" width="100" height="22" forecolor="#FFFFFF" uuid="d801a216-4330-4c05-a9c5-1934c1e3dab0"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
@@ -169,6 +173,12 @@ FROM public.convenio]]>
 			</staticText>
 			<textField>
 				<reportElement x="10" y="250" width="245" height="30" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="6aae1bd1-946b-4fdf-838f-6a980ce0a657"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
